| Bug #22696 | SR fails when using more than 1 REDO "phase" | ||
|---|---|---|---|
| Submitted: | 26 Sep 2006 9:32 | Modified: | 15 Dec 2007 8:35 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1,5.0,5.1 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[26 Sep 2006 9:32]
Jonas Oreland
[19 Nov 2007 9:48]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/38040 ChangeSet@1.2577, 2007-11-19 10:47:26+01:00, jonas@perch.ndb.mysql.com +5 -0 ndb - bug#22696 Fix handling of multiple redo phases - set correct state - handle 4 phases, by moving START_FRAGCONF to end of phase instead of beginning...
[19 Nov 2007 10:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/38043 ChangeSet@1.2579, 2007-11-19 11:10:36+01:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#22696 additional (not stricly necessary for this bug...) only send EXEC_SRCONF to node *in* SR
[19 Nov 2007 10:22]
Jonas Oreland
pushed to 51-ndb, telco-62, telco-63 and 51-telco
[23 Nov 2007 11:00]
Jon Stephens
Documented fix for 5.1.22-ndb-6.2.9, left in PQ status.
[14 Dec 2007 17:08]
Bugs System
Pushed into 5.1.23-rc
[14 Dec 2007 17:09]
Bugs System
Pushed into 6.0.5-alpha
[15 Dec 2007 8:35]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version, including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Bugfix also documented for 5.1.23 and 6.0.5. Closed.
