ndb - bug#22696   additional (not stricly necessary for this bug...)   only send EXEC_SRCONF to node *in* SR